# picsearch

./: LICENSE  README.md  setup-network.sh
airflow/: Dockerfile  README.MD  docker-compose.yml  requirements.txt  variables.json
airflow/dags/: import_crawled_data_meilisearch.py  import_crawled_data_mongo.py  import_crawled_data_pinecone.py
airflow/dags/src/: clip_client.py  meilisearch_service.py  mongo_client.py  pinecone_client.py  s3_repository.py  utils.py
api/: .env.sample  Dockerfile  README.md  api.py  config.py  docker-compose.yml  pyproject.toml  services.py  utils.py
api/clients/: clip_client.py  gpt_client.py  meilisearch_client.py  mongo_client.py  pinecone_client.py
frontend/: docker-compose.yml  package-lock.json  package.json
frontend/src/: App.jsx  index.html
frontend/src/components/: Home.jsx  Product.jsx  Result.jsx
frontend/src/css/: style.css
frontend/src/hooks/: fetchSearch.jsx
